arrows center aligned fix

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body{
 #arrowsBox{
     display: flex;
     flex-direction: column;
-    align-self: center;
+    align-items: center;
     min-width: 150px;
 }
 .aBox0, .aBox1{
